--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,25 @@
 @import './base.css';
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+.text {
+  color: var(--color-text);
+  font-size: 14px;
+  font-weight: 400;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+.h1{
+  color: var(--color-text);
+  font-size: 40px;
+  font-weight: 700;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+.h2{
+  color: var(--color-text);
+  font-size: 32px;
+  font-weight: 700;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+.h3{
+  color: var(--color-text);
+  font-size: 20px;
+  font-weight: 600;
 }
