--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -28,5 +28,6 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  background-color: var(--color-background-second);
   
 }
