att app file structure

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -22,12 +22,13 @@
 
 
 body {
-  min-height: 100vh;
   font-size: 14px;
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   background-color: var(--color-background-second);
+  margin: 0;
+  padding: 0;
   
 }
